force-app/main/default/objects/VIAutorisation_depense__c/VIAutorisation_depense__c.object-meta.xml
<CustomObject>
    <label>Autorisation de dépense</label>
    <nameField>
        <displayFormat>A{0000000}</displayFormat>
        <label>Ref de Autorisation de dépense</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Autorisations de dépense</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>