force-app/main/default/objects/VIAutorisation_depense__c/fields/Chapitre__c.field-meta.xml
<CustomField>
    <fullName>Chapitre__c</fullName>
    <label>Chapitre</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Chapitre</valueSetName>
    </valueSet>
</CustomField>