force-app/main/default/objects/VIAutorisation_depense__c/fields/Chapitre_export__c.field-meta.xml
<CustomField>
    <fullName>Chapitre_export__c</fullName>
    <formula>left(text( Sous_chapitre__c ),2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Chapitre_export</label>
    <type>Text</type>
</CustomField>