force-app/main/default/objects/VIAutorisation_depense__c/fields/Code_Affaire__c.field-meta.xml
<CustomField>
    <fullName>Code_Affaire__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Code Affaire</label>
    <referenceTo>VIAffaire__c</referenceTo>
    <relationshipLabel>Autorisations de dépense</relationshipLabel>
    <relationshipName>Autorisations_de_depense</relationshipName>
    <type>Lookup</type>
</CustomField>