force-app/main/default/objects/VIAutorisation_depense__c/fields/Etat_du_mouvement__c.field-meta.xml
<CustomField>
    <fullName>Etat_du_mouvement__c</fullName>
    <label>Etat du mouvement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Affaire_etat_Mouvement</valueSetName>
    </valueSet>
</CustomField>