force-app/main/default/objects/VIAutorisation_depense__c/fields/Lib_ch__c.field-meta.xml
<CustomField>
    <fullName>Lib_ch__c</fullName>
    <label>Lib_ch</label>
    <length>255</length>
    <type>Text</type>
</CustomField>