force-app/main/default/objects/VIAutorisation_depense__c/fields/Lib_sch__c.field-meta.xml
<CustomField>
    <fullName>Lib_sch__c</fullName>
    <label>Lib_sch</label>
    <length>255</length>
    <type>Text</type>
</CustomField>