force-app/main/default/objects/VIAutorisation_depense__c/fields/Libelle__c.field-meta.xml
<CustomField>
    <fullName>Libelle__c</fullName>
    <label>Libelle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>