force-app/main/default/objects/VIAutorisation_depense__c/fields/Sous_chapitre__c.field-meta.xml
<CustomField>
    <fullName>Sous_chapitre__c</fullName>
    <label>Sous chapitre</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Sous_chapitre</valueSetName>
    </valueSet>
</CustomField>