force-app/main/default/objects/VIAutorisation_depense__c/fields/Sous_chapitre_export__c.field-meta.xml
<CustomField>
    <fullName>Sous_chapitre_export__c</fullName>
    <formula>right(text( Sous_chapitre__c ),2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sous_chapitre_export</label>
    <type>Text</type>
</CustomField>