force-app/main/default/objects/VIAutorisation_depense__c/listViews/A_prendre.listView-meta.xml
<ListView>
    <fullName>A_prendre</fullName>
    <columns>NAME</columns>
    <columns>Code_Affaire__c</columns>
    <columns>Etat_du_mouvement__c</columns>
    <columns>Statut_autorisation_depense__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Statut_autorisation_depense__c</field>
        <operation>equals</operation>
        <value>20</value>
    </filters>
    <label>A prendre</label>
</ListView>