force-app/main/default/objects/VIAutorisation_depense__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Code_Affaire__c</columns>
    <columns>Etat_du_mouvement__c</columns>
    <columns>Statut_autorisation_depense__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tout</label>
</ListView>